--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 
         </div>
     </nav>
-    <h1>jGame</h1>
+    <div class="container mt-3">
+        <h1>jGame</h1>
+    </div>
     <button class="btn btn-primary">Primary</button>
 
     <!-- Optional JavaScript -->
