Add of instructions

--- a/index.html
+++ b/index.html
@@ -44,7 +44,21 @@
         </div>
     </nav>
     <div class="container mt-3">
-        <h1>jGame</h1>
+        <div data-page="play">
+            <h1>Home</h1>
+            <a href="play" class="btn btn-block btn-success">Play</a>
+            <a href="high-scores" class="btn btn-block btn-success">High scores</a>
+            <a href="about" class="btn btn-block btn-success">About</a>
+        </div>
+        <div data-page="play">
+            <h1>Play</h1>
+        </div>
+        <div data-page="high-score">
+            <h1>High scores</h1>
+        </div>
+        <div data-page="about">
+            <h1>About</h1>
+        </div>
     </div>
     <button class="btn btn-primary">Primary</button>
 
